force-app/main/default/objects/custom_create28__c/custom_create28__c.object-meta.xml
<CustomObject>
    <label>Custom created object28</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects28</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>