force-app/main/default/objects/custom_create28__c/fields/custom_create_28field585__c.field-meta.xml
<CustomField>
    <fullName>custom_create_28field585__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 28field585</label>
    <type>Checkbox</type>
</CustomField>