force-app/main/default/objects/custom_create28__c/fields/custom_create_28field610__c.field-meta.xml
<CustomField>
    <fullName>custom_create_28field610__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 28field610</label>
    <type>Checkbox</type>
</CustomField>